<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cacophony</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ringtone_dialog_title">All Ringtones</string>
    <string name="positive_button">OK</string>
    <string name="negative_button">Cancel</string>
    <string name="neutral_button">Ok</string>
    <string name="start_alarm">Start</string>
    <string name="stop_alarm">Stop</string>
    <string name="current_tone">Current Ringtone:</string>
    <string name="eligible">Eligible Ringtones:</string>
    <string name="refresh_app">Refresh</string>
    <string name="refresh_dialog_message">You should only click \'OK\' if you\'ve added/deleted ringtones to/from your phone.
    Once clicking \'OK\' the app will close. When opened again the app will be refreshed.</string>

</resources>
