<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_gutter"
        android:layout_marginLeft="@dimen/card_gutter"
        android:layout_marginRight="@dimen/card_gutter"
        android:layout_marginTop="@dimen/card_gutter"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/current_song_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_left_right"
                android:paddingRight="@dimen/padding_left_right"
                android:paddingTop="@dimen/text_padding_top"
                android:text="@string/current_tone"
                android:textColor="@color/accent"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/current_song"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/current_song_tag"
                android:paddingBottom="@dimen/text_padding_bottom"
                android:paddingLeft="@dimen/padding_left_right"
                android:paddingRight="@dimen/padding_left_right"
                android:paddingTop="@dimen/text_padding_top"
                android:textColor="@color/primary_text"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/alarmStarter"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/current_song"
                android:text="@string/start_alarm"
                android:textColor="@color/accent"/>

            <Button
                android:id="@+id/alarmCanceler"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/current_song"
                android:layout_toRightOf="@id/alarmStarter"
                android:text="@string/stop_alarm"
                android:textColor="@color/negative_action"/>

            <!--Eventually turn the refresh button into an action button because clutter-->

            <Button
                android:id="@+id/refreshApp"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/current_song"
                android:layout_toRightOf="@id/alarmCanceler"
                android:text="@string/refresh_app"
                android:textColor="@color/neutral_action"/>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/selected_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_light"
        android:padding="@dimen/padding_left_right"
        android:text="@string/eligible"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:src="@drawable/ic_queue_music_white_24dp"
            fab:fab_colorNormal="@color/accent"/>
    </FrameLayout>

</LinearLayout>